# Plots_workbench

./: .cursorrules  .gitignore  README.md
client/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
client/.cursor/rules/: cursor-rules.mdc  frontend-naming-conventions.mdc  react-component-rules.mdc  react-hook-rules.mdc  task-list.mdc  typescript-function-rules.mdc  ui-components.mdc
client/llm/: chat_1.md  chat_2.md  chat_3.md
client/llm/chats/: chat.md  chat_1.md  chat_2.md  chat_3.md  chat_4.md  chat_5.md  chat_6.md  chat_7.md  chat_8.md
client/src/: App.tsx  main.tsx
client/src/hooks/: index.ts  use-filtered-timeseries.ts  use-keybind.ts  use-scatter-plot-data.ts  use-tool-state.ts
client/src/lib/: plot-config.ts  plot.config.ts
client/src/models/: index.ts  timeseries.models.ts
server/: .gitignore  pyproject.toml  run_server.py
server/src/app/: app.py
server/src/app/api/routes/: root.py
server/src/app/config/: config_plots.py
server/src/app/db/cache/: piccolo_app.py  piccolo_conf.py
server/src/app/db/primary/: piccolo_app.py  piccolo_conf.py
server/src/app/db/queues/: piccolo_app.py  piccolo_conf.py
server/src/app/plots/: __init__.py  figure_style.py  figure_wrapper.py  plotter_bar.py  plotter_hist.py  plotter_line.py  plotter_scatter.py
server/src/app/plots/styles/: layout_bar.yaml  layout_histogram_h.yaml  layout_histogram_v.yaml  layout_line.yaml  layout_scatter.yaml  style_dark.yaml  style_light.yaml
server/src/app/utils/: send_email.py
(+96 files in other folders)
